# ams553

./: ServiceTimeAnalysis.m  pyproject.toml
Input Analysis/: Interarrival Times Analysis.R  NewServiceTimeAnalysis.m
data/: Input Analysis Data.xlsx  seawulf-data.20211111.final.csv  squeued.20211111.cleaned.csv  squeued.20211111.csv  squeued.20211111.mergedparts.csv  squeued.20211111.mergedparts2.csv  squeued.20211125.shelf.dir
src/Depricated/: scratch.ipynb  scratch.py  simulation.ipynb  simulation2.ipynb
src/notebooks/: SeaWulf_Simulator.ipynb  plotting.ipynb  scratch.py
src/notebooks/.ipynb_checkpoints/: SeaWulf_Simulator-checkpoint.ipynb  plotting-checkpoint.ipynb  scratch-checkpoint.ipynb  simulation-checkpoint.ipynb
